 * Libotp: getter/setter system, struct otp is now private
 * Libotp: otp_conf system implemented, libotp is multi-application aware
 * Libotp keeps filehandles and mmap open to save CPU cycles.
 * Libotp locks the keyfiles that are in use.
 * A tailing minimal padding is added to the messages on encryption (and also
   random length padding) (allows future feature without breakage of the spec.)



Version 0.1.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: Basic plugin structure, libotp API
 * A build system 'from hell'! (but it seems to work)
 * Session and key management documentation
 * Paranoia: CLI functionality
 * Paranoia: Key list search functions
 * Paranoia: Key list is generated from files and can be freed
 * Paranoia: Basic session initialisation
 * Paranoia: Basic session closing
 * Paranoia: Encryptet messages are labelled
 * Paranoia: Working commands: /otp help, info, on, off, genkey
 * Paranoia: Change fake <otp> strings
 * Paranoia: Session closing on plugin unload

Christan Wäckerlin:
 * One-time pad documentation
 * Libotp: xor function
 * Libotp: base64 encode and decode using gnomelib
 * Libotp: encrypt and decrypt
 * Libotp: struct *mypad is generated from keyfile
 * Libotp: Keyfile templates added
 * Libotp: Full keyfile support
 * Added support for the ./configure --disable-otp swich that disables libotp
   support for development.
 * Added support for protected entropy signaling (i.e. no entropy  signal)
 * Added support for keyfile creation
 * Added support for the destruction of keyfiles (using up all entropy)
 * Added support for key check using repeatprobability.
 * Added support for addition of a random tail onto the encrypted message 
   to prevent 'eve' from knowing the exact length of the message


Known bugs:
 * there are some anomalies if both set /otp off and one user tries to reenable
 * Keyfile creation function is not threaded and therfore locks pidgin