@@ -1,6 +1,6 @@
 /*
     Pidgin-Paranoia Plug-in - Encrypts your messages with a one-time pad.
-    Copyright (C) 2007  Simon Wenner, Christian Wäckerlin, Pascal Sachs
+    Copyright (C) 2007-2008  Pascal Sachs
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
